feat: password login fallback for superadmins

--- a/src/components/AccountButton.astro
+++ b/src/components/AccountButton.astro
@@ -50,4 +50,4 @@
   </details>
 </div>
 
-<script src="/src/scripts/account-button.js"></script>
+<script type="module" src="/src/scripts/account-button.js"></script>
