--- a/src/components/ChurchesMap.astro
+++ b/src/components/ChurchesMap.astro
@@ -1,5 +1,4 @@
 ---
-import churchesMapScript from '../scripts/churches-map.js?url';
 const id = 'churches-map';
 ---
 
@@ -16,4 +15,4 @@ const id = 'churches-map';
 </noscript>
 
 <!-- Script bundlado por Vite: inicializa Leaflet -->
-<script type="module" src={churchesMapScript}></script>
+<script type="module" src="/src/scripts/churches-map.js"></script>
