--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,3 @@
-
 ---
 import SEO from '@components/SEO.astro';
 import Header from '@components/Header.astro';
@@ -35,7 +34,7 @@ const {
     {!hideFooter && <Footer />}
     
     <!-- Smooth Scroll & Parallax Animations -->
-    <script src="/src/scripts/lenis.js"></script>
-    <script src="/src/scripts/home-animations.js"></script>
+    <script type="module" src="/src/scripts/lenis.js"></script>
+    <script type="module" src="/src/scripts/home-animations.js"></script>
   </body>
 </html>
